--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,15 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
+remote_theme: jekyll/minima
+
+minima:
+  skin: dark
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
